- Fixed some issues with SequenceFile operations   (open, readNext, close) - Fixed ArraySize of sendCMD (HamaPipes.cc) - Check for emtyp libjars argument   (DistributedCacheUtil & BSPPeerImpl)
git-svn-id: https://svn.illecker.at/hadoop/hama-0.5.0-gpu@56 cd3ed8ed-2b84-4d77-b37a-30769d1bbaf4